--- a/src/Bellhop.Api/appsettings.json
+++ b/src/Bellhop.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+	"ConnectionStrings": {
+		"default": "Host=localhost;Database=bellhope_db;Username=dbadm;Password=p@ssw0rd"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
