--- a/src/Bellhop.Api/Bellhop.Api.csproj
+++ b/src/Bellhop.Api/Bellhop.Api.csproj
@@ -2,4 +2,17 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Bellhop.Common\Bellhop.Common.csproj" />
+	  <ProjectReference Include="..\Bellhop.Core\Bellhop.Core.csproj" />
+	  <ProjectReference Include="..\Bellhop.Data\Bellhop.Data.csproj" />
+	</ItemGroup>
 </Project>
