--- a/src/Bellhop.Data/Bellhop.Data.csproj
+++ b/src/Bellhop.Data/Bellhop.Data.csproj
@@ -1,5 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<UserSecretsId>f50c7abe-2b8b-491d-a73f-17f3250a41be</UserSecretsId>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+	  <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.9" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Bellhop.Common\Bellhop.Common.csproj" />
+	  <ProjectReference Include="..\Bellhop.Core\Bellhop.Core.csproj" />
+	</ItemGroup>
 </Project>
